<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CriarLoteActivity">

    <TextView
        android:id="@+id/criar_lote_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/criar_lote_orientacao"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/criar_lote_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/criar_lote_nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criar_lote_orientacao"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/criar_lote_quantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/criar_lote_numero"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/criar_lote_nome"
        app:layout_constraintStart_toStartOf="@id/criar_lote_nome"
        app:layout_constraintTop_toBottomOf="@+id/criar_lote_nome"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/criar_lote_producao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/criar_lote_producao_media"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/criar_lote_quantidade"
        app:layout_constraintStart_toStartOf="@id/criar_lote_quantidade"
        app:layout_constraintTop_toBottomOf="@+id/criar_lote_quantidade"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/criar_lote_lactacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fase_lactacao"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/criar_lote_producao"
        app:layout_constraintTop_toBottomOf="@+id/criar_lote_producao" />

    <RadioGroup
        android:id="@+id/criar_lote_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/criar_lote_lactacao"
        app:layout_constraintTop_toBottomOf="@+id/criar_lote_lactacao">

        <RadioButton
            android:id="@+id/criar_lote_radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcao_a" />

        <RadioButton
            android:id="@+id/criar_lote_radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcao_b" />

        <RadioButton
            android:id="@+id/criar_lote_radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcao_c" />
    </RadioGroup>

    <Button
        android:id="@+id/criar_lote_botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/criar_lote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criar_lote_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>