<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuarioActivity">

    <EditText
        android:id="@+id/cadastro_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/cadastro_cpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:hint="@string/cpf"
        android:maxLength="11"
        app:layout_constraintEnd_toEndOf="@id/cadastro_nome"
        app:layout_constraintStart_toStartOf="@+id/cadastro_nome"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_nome"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/cadastro_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/cadastro_cpf"
        app:layout_constraintStart_toStartOf="@+id/cadastro_cpf"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_cpf"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/cadastro_confirma_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/cadastro_senha"
        app:layout_constraintStart_toStartOf="@+id/cadastro_senha"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_senha"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/cadastro_botao_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cadastro_botao_cancelar"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_confirma_senha"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cadastro_botao_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cadastro_botao_confirmar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_confirma_senha"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>